# coreml

./: CHANGELOG.md  LICENSE  README.md  coreml.cabal
app/: Main.hs
src/: Eval.hs  TM.hs
