cabal-version:      3.0
name:               coreml
version:            0.1.0.0
homepage:           https://github.com/cutsea110/coreml.git
license:            BSD-3-Clause
license-file:       LICENSE
author:             cutsea110
maintainer:         cutsea110@gmail.com
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
common warnings
    ghc-options: -Wall
library
    exposed-modules:  TM
                      Eval
    build-depends:    base, containers
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
executable coreml
    import:           warnings
    main-is:          Main.hs
    build-depends:    base
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall
